# AgarVision_2024

./: .gitignore  README.md  events.out.tfevents.1708798670.104-171-203-247.3186.0  pyproject.toml
notebooks/: binary_classifier.ipynb  submission.csv
yolo/code/: data.sh  eval.py  eval.sh  novo.yaml  process_data.ipynb  sbatch.sh
